apps/argocd/base/database/cloudnative-pg/app/cluster/service.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: postgres-lb
#   namespace: databases
# spec:
#   type: LoadBalancer
#   externalTrafficPolicy: Local
#   loadBalancerIP: 10.0.6.51
#   ports:
#     - name: postgres
#       port: 5432
#       protocol: TCP
#       targetPort: 5432
#   selector:
#     cnpg.io/cluster: postgres-v15
#     role: primary
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  namespace: databases
  labels:
    cnpg.io/cluster: postgres
spec:
  type: LoadBalancer
  # externalTrafficPolicy: Local
  selector:
    cnpg.io/cluster: postgres
    role: primary
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
